--- a/frontend/src/styles/levels.css
+++ b/frontend/src/styles/levels.css
@@ -7,7 +7,7 @@
   height: calc(100vh - 10rem);
   background-color: #444444;
   border-radius: 1rem;
-  overflow-y: scroll;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -32,16 +32,22 @@
   text-transform: uppercase;
   font-size: 0.7rem;
   float: left;
-
 }
-.difficulty-intro { color: #406dde; }
-.difficulty-easy { color: #27ba51; }
-.difficulty-medium { color: #d1be2e; }
-.difficulty-hard { color: #d1462e; }
-
+.difficulty-intro {
+  color: #406dde;
+}
+.difficulty-easy {
+  color: #27ba51;
+}
+.difficulty-medium {
+  color: #d1be2e;
+}
+.difficulty-hard {
+  color: #d1462e;
+}
 
 button.lvl-btn {
-    padding: 0.5rem 4rem 0.5rem 0.5rem;
+  padding: 0.5rem 4rem 0.5rem 0.5rem;
 }
 
 .lvl-btn {
